# ai_intelligent_voice_framework

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  intell_voice_service.gni
frameworks/js/: BUILD.gn
frameworks/js/napi/: engine_event_callback_napi.cpp  engine_event_callback_napi.h  enroll_intell_voice_engine_callback_napi.cpp  enroll_intell_voice_engine_callback_napi.h  enroll_intell_voice_engine_napi.cpp  enroll_intell_voice_engine_napi.h  intell_voice_common_napi.cpp  intell_voice_common_napi.h  intell_voice_manager_napi.cpp  intell_voice_manager_napi.h  intell_voice_napi_queue.cpp  intell_voice_napi_queue.h  intell_voice_napi_util.cpp  intell_voice_napi_util.h  intell_voice_update_callback_napi.cpp  intell_voice_update_callback_napi.h  service_change_callback_napi.cpp  service_change_callback_napi.h  uv_callback_napi.cpp  uv_callback_napi.h  wakeup_intell_voice_engine_napi.cpp  wakeup_intell_voice_engine_napi.h  wakeup_manager_napi.cpp  wakeup_manager_napi.h
frameworks/native/: BUILD.gn  enroll_intell_voice_engine.cpp  intell_voice_load_callback.cpp  intell_voice_manager.cpp  wakeup_intell_voice_engine.cpp
frameworks/taihe/: BUILD.gn
frameworks/taihe/idl/: ohos.ai.intelligentVoice.context.taihe  ohos.ai.intelligentVoice.taihe
frameworks/taihe/inc/: enroll_intell_voice_engine_callback_taihe.h  enroll_intell_voice_engine_taihe.h  intell_voice_manager_callback_taihe.h  intell_voice_manager_taihe.h  intell_voice_update_callback_taihe.h  intellvoice_taihe_utils.h  wakeup_intell_voice_engine_callback_taihe.h  wakeup_intell_voice_engine_taihe.h  wakeup_manager_taihe.h
frameworks/taihe/src/: ani_constructor.cpp  enroll_intell_voice_engine_callback_taihe.cpp  enroll_intell_voice_engine_taihe.cpp  intell_voice_manager_callback_taihe.cpp  intell_voice_manager_taihe.cpp  intell_voice_update_callback_taihe.cpp  intellvoice_taihe_utils.cpp  wakeup_intell_voice_engine_callback_taihe.cpp  wakeup_intell_voice_engine_taihe.cpp  wakeup_manager_taihe.cpp
llt/hdt/: CMakeLists.txt  build.sh  run.sh
llt/hdt/depend_libs/cmake/: CMakeLists.txt  libhilog.cmake  libsec.cmake  libutilsbase.cmake
llt/hdt/depend_libs/src/: file_ex.cpp
llt/hdt/stub/: message_parcel.cpp
llt/hdt/testcase/intell_voice_utils/: test_time_util.cpp
services/: BUILD.gn
services/etc/: BUILD.gn  intell_voice_service.cfg  intell_voice_service.rc
services/intell_voice_engine/: BUILD.gn  i_intell_voice_engine.h  i_intell_voice_service.h  i_intell_voice_update_callback.h  libintelligentvoice_dummy_engine.versionscript  libintelligentvoice_engine.versionscript  libintelligentvoice_only_first_engine.versionscript
services/intell_voice_engine/inc/: dummy_engine_manager.h  engine_base.h  engine_callback_message.h  intell_voice_engine_arbitration.h  intell_voice_engine_manager.h  only_first_engine_manager.h  update_engine_controller.h  update_state.h
services/intell_voice_engine/proxy/: engine_callback_inner.cpp  engine_callback_inner.h  intell_voice_death_recipient_stub.h  intell_voice_engine_callback_stub.cpp  intell_voice_engine_callback_stub.h  intell_voice_engine_proxy.cpp  intell_voice_engine_proxy.h  intell_voice_service_proxy.cpp  intell_voice_service_proxy.h  intell_voice_update_callback_stub.cpp  intell_voice_update_callback_stub.h  update_callback_inner.cpp  update_callback_inner.h
services/intell_voice_engine/server/base/: adapter_callback_service.cpp  adapter_callback_service.h  audio_capturer_source_change_callback.cpp  audio_capturer_source_change_callback.h  audio_debug.cpp  audio_debug.h  audio_source.cpp  audio_source.h  data_operation_callback.cpp  data_operation_callback.h  engine_base.cpp  engine_base.h  engine_factory.cpp  engine_factory.h  engine_util.cpp  (+10 more)
services/intell_voice_service/: BUILD.gn  libintell_voice_server.versionscript
services/intell_voice_service/inc/: i_intell_voice_engine.h  i_intell_voice_engine_callback.h  i_intell_voice_service.h  intell_voice_definitions.h
services/intell_voice_trigger/: BUILD.gn  libintelligentvoice_dummy_trigger.versionscript  libintelligentvoice_trigger.versionscript
services/intell_voice_trigger/inc/: dummy_trigger_manager.h  trigger_base_type.h  trigger_callback_message.h  trigger_manager.h
services/intell_voice_trigger/server/: dummy_trigger_manager.cpp  i_intell_voice_trigger_adapter_listener.h  i_intell_voice_trigger_detector_callback.h  i_intell_voice_trigger_recognition_callback.h  trigger_base_type.cpp  trigger_base_type.h  trigger_callback_message.cpp  trigger_db_helper.cpp  trigger_db_helper.h  trigger_detector.cpp  trigger_detector.h  trigger_detector_callback.cpp  trigger_detector_callback.h  trigger_detector_recognition_callback.cpp  trigger_detector_recognition_callback.h  trigger_helper.cpp  trigger_helper.h  trigger_manager.cpp  trigger_manager.h  trigger_service.cpp  trigger_service.h
tests/fuzztest/intellvoice_fuzzer/: BUILD.gn  intellvoice_fuzzer.cpp
tests/fuzztest/intellvoicemanager_fuzzer/: BUILD.gn  enroll_engine_test.cpp  enroll_engine_test.h  intell_voice_manager_fuzzer.cpp  intell_voice_manager_test.cpp  intell_voice_manager_test.h  wakeup_engine_test.cpp  wakeup_engine_test.h
tests/fuzztest/servicemanager_fuzzer/: BUILD.gn  servicemanager_fuzzer.cpp
tests/unittest/intell_voice_test/: BUILD.gn
tests/unittest/multiple_capturer_test/: BUILD.gn
utils/: BUILD.gn  array_buffer_util.cpp  array_buffer_util.h  base_constants.h  base_macros.h  base_thread.cpp  base_thread.h  ffrt_api.h  history_info_mgr.cpp  history_info_mgr.h  huks_aes_adapter.cpp  huks_aes_adapter.h  id_allocator.cpp  id_allocator.h  intell_voice_death_recipient.h  intell_voice_generic_factory.h  intell_voice_log.h  intell_voice_util.cpp  intell_voice_util.h  memory_guard.cpp  memory_guard.h  message_queue.cpp  message_queue.h  msg_handle_thread.cpp  msg_handle_thread.h  queue_util.h  scope_guard.h  service_db_helper.cpp  service_db_helper.h  state_manager.cpp  state_manager.h  string_util.cpp  string_util.h  task_executor.cpp  task_executor.h  thread_wrapper.cpp  thread_wrapper.h  time_util.cpp  time_util.h  timer_mgr.cpp  (+1 more)
(+183 files in other folders)
