# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  telephony_service_enable = false
  intelligent_voice_framework_trigger_enable = true
  intelligent_voice_framework_engine_enable = true
  intelligent_voice_framework_only_first_stage = false
  intelligent_voice_framework_only_second_stage = false
  intelligent_voice_framework_window_manager_enable = false
  intelligent_voice_framework_power_manager_enable = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.telephony_state_registry) &&
      defined(global_parts_info.telephony_core_service) &&
      defined(global_parts_info.telephony_call_manager)) {
    telephony_service_enable = true
  }
}
