# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../intell_voice_service.gni")

ohos_shared_library("intell_voice_proxy") {
  sources = [
    "intell_voice_engine/proxy/engine_callback_inner.cpp",
    "intell_voice_engine/proxy/intell_voice_engine_callback_stub.cpp",
    "intell_voice_engine/proxy/intell_voice_engine_proxy.cpp",
    "intell_voice_engine/proxy/intell_voice_service_proxy.cpp",
    "intell_voice_engine/proxy/intell_voice_update_callback_stub.cpp",
    "intell_voice_engine/proxy/update_callback_inner.cpp",
  ]

  include_dirs = [
    "intell_voice_service/inc",
    "intell_voice_engine/proxy",
    "../utils",
  ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.0",
    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.1",
    "drivers_interface_intelligent_voice:libintell_voice_engine_proxy_1.2",
    "hdf_core:libhdf_host",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "ai"
  part_name = "intelligent_voice_framework"
}
