# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("intell_voice_utils") {
  configs = [ "//build/config/compiler:exceptions" ]

  sources = [
    "array_buffer_util.cpp",
    "base_thread.cpp",
    "huks_aes_adapter.cpp",
    "id_allocator.cpp",
    "intell_voice_util.cpp",
    "memory_guard.cpp",
    "message_queue.cpp",
    "msg_handle_thread.cpp",
    "state_manager.cpp",
    "string_util.cpp",
    "task_executor.cpp",
    "time_util.cpp",
    "timer_mgr.cpp",
  ]

  defines = []
  if (use_musl) {
    if (use_jemalloc && use_jemalloc_dfx_intf) {
      defines += [ "CONFIG_USE_JEMALLOC_DFX_INTF" ]
    }
  }

  deps = []

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "huks:libhukssdk",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  subsystem_name = "ai"
  part_name = "intelligent_voice_framework"
}
