# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../intell_voice_service.gni")

ohos_shared_library("intell_voice_utils") {
  configs = [ "//build/config/compiler:exceptions" ]

  include_dirs =
      [ "../../../ai/intelligent_voice_framework/interfaces/inner_api/native" ]

  sources = [
    "array_buffer_util.cpp",
    "base_thread.cpp",
    "history_info_mgr.cpp",
    "id_allocator.cpp",
    "intell_voice_util.cpp",
    "memory_guard.cpp",
    "message_queue.cpp",
    "msg_handle_thread.cpp",
    "service_db_helper.cpp",
    "state_manager.cpp",
    "string_util.cpp",
    "task_executor.cpp",
    "thread_wrapper.cpp",
    "time_util.cpp",
    "timer_mgr.cpp",
  ]

  defines = [ "USE_FFRT" ]
  if (use_musl) {
    if (musl_use_jemalloc && musl_use_jemalloc_dfx_intf) {
      defines += [ "CONFIG_USE_JEMALLOC_DFX_INTF" ]
    }
  }

  if (build_variant == "root") {
    defines += [ "INTELL_VOICE_BUILD_VARIANT_ROOT" ]
  }

  external_deps = [
    "ability_runtime:ability_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "safwk:system_ability_fwk",
  ]

  subsystem_name = "ai"
  part_name = "intelligent_voice_framework"

  if (intelligent_voice_framework_engine_enable) {
    sources += [ "huks_aes_adapter.cpp" ]
    external_deps += [ "huks:libhukssdk" ]
  }
}
