# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("intellvoice_native_config") {
  include_dirs = [
    "../../interfaces/inner_api/native",
    "../../services/intell_voice_engine",
    "../../services/intell_voice_engine/proxy",
    "../../utils",
  ]
}

ohos_shared_library("intellvoice_native") {
  sources = [
    "enroll_intell_voice_engine.cpp",
    "intell_voice_load_callback.cpp",
    "intell_voice_manager.cpp",
    "wakeup_intell_voice_engine.cpp",
  ]

  include_dirs = [
    "../../interfaces/inner_api/native",
    "../../services/intell_voice_engine",
    "../../services/intell_voice_engine/proxy",
    "../../utils",
  ]

  public_configs = [ ":intellvoice_native_config" ]

  cflags_cc = [
    "-Wno-error=unused-parameter",
    "-DHILOG_ENABLE",
    "-DENABLE_DEBUG",
  ]

  deps = [ "../../services:intell_voice_proxy" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "drivers_interface_intelligent_voice:intell_voice_engine_idl_headers",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  innerapi_tags = [ "ndk" ]
  subsystem_name = "ai"
  part_name = "intelligent_voice_framework"
}
